# nimbus

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
nimbus/: __main__.py  app.py  input.py  layout.py  renderer.py  state.py  tray.py  window.py
nimbus/animation/: __init__.py
nimbus/core/: animation.py  state.py
nimbus/modules/: __init__.py  clock.py  media.py  notifications.py  permissions.py  status.py  timer.py
nimbus/utils/: config.py
tests/: __init__.py  test_modules.py  test_spring.py  test_state.py
